--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,4 +1,9 @@
-<h2>新規登録</h2>
+<div class='container'>
+  <div class='row'>
+    <h2>新規登録</h2>
+  </div>
+</div>
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "user/shared/error_messages", resource: resource %>
