--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,47 +1,42 @@
-<div class='container'>
-  <div class='row'>
-    <h2>新規登録</h2>
-  </div>
-</div>
+<h2>新規登録</h2>
 
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "user/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "user/shared/error_messages", resource: resource %>
+    <div class="field">
+      <%= f.label '名前' %><span class="badge badge-light ml-2">必須</span>
+      <%= f.text_field :last_name, placeholder: "性", autofocus: true %>
+      <%= f.text_field :first_name, placeholder: "名" %>
+    </div>
 
-  <div class="field">
-    <%= f.label '名前' %><br />
-    <%= f.text_field :last_name, autofocus: true %>
-    <%= f.text_field :first_name %>
-  </div>
+    <div class="field">
+      <%= f.label :nickname, 'ニックネーム' %><span class="badge badge-light ml-2">必須</span>
+      <%= f.text_field :nickname, placeholder: "ぴょん太" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :nickname, 'ニックネーム' %><br />
-    <%= f.text_field :nickname %>
-  </div>
+    <div class="field">
+      <%= f.label :introduction, '自己紹介' %>
+      <%= f.text_field :introduction %>
+    </div>
 
-  <div class="field">
-    <%= f.label :introduction, '自己紹介' %><br />
-    <%= f.text_field :introduction %>
-  </div>
+    <div class="field">
+      <%= f.label :email, 'メールアドレス' %><span class="badge badge-light ml-2">必須</span>
+      <%= f.email_field :email, autofocus: true,placeholder: "12345678", autocomplete: "email" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email, 'メールアドレス' %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.label :password, 'パスワード（6文字以上）' %><span class="badge badge-light ml-2">必須</span>
+      <%= f.password_field :password,placeholder: "12345678", autocomplete: "new-password" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password, 'パスワード（6文字以上）' %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="field">
+      <%= f.label :password_confirmation, 'パスワード再確認（6文字以上）' %><span class="badge badge-light ml-2">必須</span>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, 'パスワード再確認（6文字以上）' %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="actions">
+      <%= f.submit "新規登録",class: 'btn btn-success' %>
+    </div>
+  <% end %>
 
-  <div class="actions">
-    <%= f.submit "新規登録" %>
-  </div>
-<% end %>
-
-<%= render "user/shared/links" %>
+  <%= render "user/shared/links" %>
