--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,2 +1,3 @@
-<h1>User::Homes#top</h1>
-<p>Find me in app/views/user/homes/top.html.erb</p>
+<h1>ようこそプログラミング専用サイトへ</h1>
+<p>お互いに切磋琢磨しレベルの高いエンジニアを目指してみんなで知識理解を深めましょう</p>
+<%= link_to "注意点やお願い、本サイトの目的", about_path %>を読んでいただけると幸いです
