--- a/app/views/user/members/edit.html.erb
+++ b/app/views/user/members/edit.html.erb
@@ -1,2 +1,20 @@
-<h1>User::Members#edit</h1>
-<p>Find me in app/views/user/members/edit.html.erb</p>
+<%= form_with model: @member,url: member_path(@member.id) do |f| %>
+    <div>
+      <%= f.label '名前' %><span>必須</span>
+      <%= f.text_field :last_name, autofocus: true %>
+      <%= f.text_field :first_name %>
+    </div>
+
+    <div>
+      <%= f.label :nickname, 'ニックネーム' %><span>必須</span>
+      <%= f.text_field :nickname %>
+    </div>
+
+    <div>
+      <%= f.label :introduction, '自己紹介' %>
+      <%= f.text_field :introduction %>
+    </div>
+
+    <%= f.submit '更新する', class: 'btn btn-success' %>
+
+<% end %>
