--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -1,2 +1,18 @@
-<h1>User::Posts#index</h1>
-<p>Find me in app/views/user/posts/index.html.erb</p>
+<table>
+  <thead>
+    <tr>
+      <th>投稿者</th>
+      <th>タイトル</th>
+      <th>内容</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @posts.each do |post| %>
+      <tr>
+        <td><%= link_to post.member.nickname, member_path(post.member_id) %></td>
+        <td><%= link_to post.title, post_path(post.id) %></td>
+        <td><%= post.content.truncate(30) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
