--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -1,2 +1,14 @@
-<h1>User::Posts#new</h1>
-<p>Find me in app/views/user/posts/new.html.erb</p>
+<h2>新規投稿</h2>
+<%= form_with model: @post,url: posts_path do |f| %>
+  <div>
+    <%= f.label :title, 'タイトル' %>
+    <%= f.text_field :title %>
+  </div>
+  <div>
+    <%= f.label :content, '内容' %>
+    <%= f.text_field :content %>
+  </div>
+  <div>
+    <%= f.submit '投稿',class: 'btn btn-success' %>
+  </div>
+<% end %>
