バリデーション少し追加

--- a/app/views/user/members/check.html.erb
+++ b/app/views/user/members/check.html.erb
@@ -1,2 +1,10 @@
-<h1>User::Members#check</h1>
-<p>Find me in app/views/user/members/check.html.erb</p>
+<h3>本当に退会しますか？</h3>
+<p>退会すると主に以下の項目が使えなくなります</p>
+<ul>
+  <li>投稿すること</li>
+  <li>いいねすること</li>
+  <li>コメントすること</li>
+  <li>自分の今までの投稿を見ること</li>
+</ul>
+
+<%link_to '' %>
