--- a/app/views/user/members/show.html.erb
+++ b/app/views/user/members/show.html.erb
@@ -24,4 +24,5 @@
 <% if current_member.id == @member.id %>
   <%= link_to '新規投稿する', new_post_path,class: 'btn btn-success' %>
   <%= link_to '編集する', edit_member_path(@member.id),class: 'btn btn-success' %>
+  <%= link_to '退会する',check_path,class: 'btn btn-danger' %>
 <% end %>
