view大まかにおしまい

--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -1,2 +1,56 @@
-<h1>Admin::Members#show</h1>
-<p>Find me in app/views/admin/members/show.html.erb</p>
+<%= link_to '会員一覧へ', admin_members_path %>
+<table>
+  <tbody>
+    <tr>
+      <th>会員名</th>
+      <td><%= @member.full_name %></td>
+    </tr>
+
+    <tr>
+      <th>ニックネーム</th>
+      <td><%= @member.nickname %></td>
+    </tr>
+
+    <tr>
+      <th>自己紹介文</th>
+      <td><%= @member.introduction %></td>
+    </tr>
+
+    <tr>
+      <th>メールアドレス</th>
+      <td><%= @member.email %></td>
+    </tr>
+
+    <tr>
+      <th>ステータス</th>
+      <td>
+        <% if @member.is_active  %>
+          <div>有効</div>
+        <% else %>
+          <div>退会</div>
+        <% end %>
+      </td>
+    </tr>
+
+  </tbody>
+</table>
+
+<table>
+  <thead>
+    <tr>
+      <th>タイトル</th>
+      <th>内容</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @posts.each do |post| %>
+      <tr>
+        <td><%= link_to post.title, admin_post_path(post.id) %></td>
+        <td><%= post.content.truncate(30) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<%= link_to "#{@member.full_name}さんの編集ページへ", edit_admin_member_path(@member.id) %>
+
