--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,19 @@
         <%= link_to 'ログアウト', destroy_member_session_path, method: :delete, class: 'header-item' %>
       </li>
 
+    <% elsif admin_signed_in? %>
+      <li>
+        <%= link_to '会員一覧', admin_members_path, class: 'header-item' %>
+      </li>
+
+      <li>
+        <%= link_to '投稿一覧', admin_posts_path, class: 'header-item' %>
+      </li>
+
+      <li>
+        <%= link_to 'ログアウト', destroy_admin_session_path, method: :delete, class: 'header-item' %>
+      </li>
+
     <% else %>
 
       <li>
