--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Admin::Posts#index</h1>
-<p>Find me in app/views/admin/posts/index.html.erb</p>
+<h2>投稿一覧</h2>
+<table>
+  <tr>
+    <th>投稿者</th>
+    <th>タイトル</th>
+    <th>内容</th>
+  </tr>
+  <tbody>
+    <% @posts.each do |post| %>
+      <tr>
+        <td><%= link_to post.member.full_name, admin_member_path(post.member_id) %></td>
+        <td><%= post.title %></td>
+        <td><%= post.content.truncate(30) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
