--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Admin::Posts#show</h1>
-<p>Find me in app/views/admin/posts/show.html.erb</p>
+<h2><%= @member.full_name %>さんの投稿</h2>
+
+<table>
+  <tbody>
+
+    <tr>
+      <th>タイトル</th>
+      <td><%= @post.title %></td>
+    </tr>
+
+    <tr>
+      <th>投稿内容</th>
+      <td><%= @post.content %></td>
+    </tr>
+
+  </tbody>
+</table>
+
+
