いいねフォロー機能実装

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,7 +35,7 @@
     <% else %>
 
       <li>
-      <%= link_to 'ゲストログイン', about_path, class: 'header-item' %>
+      <%= link_to 'ゲストログイン', guest_sign_in_path, method: :post, class: 'header-item' %>
       </li>
 
       <li>
