--- a/app/views/user/relationships/followings.html.erb
+++ b/app/views/user/relationships/followings.html.erb
@@ -1,2 +1,22 @@
-<h1>User::Relationships#followings</h1>
-<p>Find me in app/views/user/relationships/followings.html.erb</p>
+<% if @members.exists? %>
+  <% @members.each do |member| %>
+    <table>
+      <thead>
+        <tr>
+          <th>名前</th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><%= member.full_name %></td>
+          <td>フォロー数: <%= member.followings.count %></td>
+          <td>フォロワー数: <%= member.followers.count %></td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
+<% else %>
+  <p>ユーザーはいません</p>
+<% end %>
