いいね一覧画面

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
 
   <body>
     <%= render '/layouts/header' %>
+    <% if flash[:notice] %>
+      <%= flash[:notice] %>
+    <% end %>
     <%= yield %>
     <%= render '/layouts/footer' %>
   </body>
