--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,5 +1,5 @@
 <% if obj.errors.any? %>
   <% obj.errors.full_messages.each do |message| %>
-    <%= message %>
+    <div><%= message %></div>
   <% end %>
 <% end %>
