検索機能追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <% if flash[:notice] %>
       <%= flash[:notice] %>
     <% end %>
-    <%= render 'layouts/search' %>
+    <%= render '/user/searches/form' %>
     <%= yield %>
     <%= render '/layouts/footer' %>
   </body>
