--- a/app/views/user/members/index.html.erb
+++ b/app/views/user/members/index.html.erb
@@ -7,12 +7,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @members.each do |member| %>
-      <tr>
-        <td><%= link_to member.nickname,member_path(member.id) %></td>
-        <td></td>
-      </tr>
-    <% end %>
+    <%= render 'user/members/index', members: @members %>
   </tbody>
 </table>
 
