下書き保存機能

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,10 @@
       </li>
 
       <li>
+        <%= link_to "下書き一覧", confirm_posts_path, class: "header-item" %>
+      </li>
+
+      <li>
         <%= link_to 'ログアウト', destroy_member_session_path, method: :delete, class: 'header-item' %>
       </li>
 
