並び替え機能

--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -10,3 +10,12 @@
     <%= render 'user/posts/index', posts: @posts %>
   </tbody>
 </table>
+
+<%= form_with url: sort_path, method: :get, local: true do |f| %>
+  <%= f.select :keyword, [  ['投稿が新しい順', 'new'],
+                            ['投稿が古い順', 'old'],
+                            ['いいねが多い順', 'likes'],
+                            ['いいねが少ない順', 'dislikes']
+                          ] %>
+  <%= f.submit 'タグ検索' %>
+<% end %>
