--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -7,7 +7,10 @@
   </div>
   <div>
     <%= f.label :content, '内容' %><br />
-    <%= f.text_field :content %>
+    <%= f.text_area :content %>
+  </div>
+  <div>
+    <%= f.text_field :name %>
   </div>
   <div>
     <%= f.select :status, Post.statuses.keys.map{ |k| [t("enums.post.status.#{k}"),k]},{} %>
