--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,6 +1,11 @@
-<h1 class='text-center mt-5'>ようこそプログラミング勉強専用サイトへ！！</h1>
-<p class='text-center'>お互いに切磋琢磨しレベルの高いエンジニアを目指してみんなで知識理解を深めましょう</p>
+<div class='height-100'>
+  <h1 class='text-center mt-5'>ようこそプログラミング勉強専用サイトへ！！</h1>
 
-<div class='text-right mr-5 mb-2'>
-<%= link_to "注意点やお願い、本サイトの目的", about_path %><span>を読んでいただけると幸いです。</span>
+  <p class='text-center my-5'>
+    お互いに切磋琢磨しレベルの高いエンジニアを目指してみんなで知識理解を深めましょう
+  </p>
+
+  <div class='text-right about-link'>
+    <%= link_to "注意点やお願い、本サイトの目的", about_path %><span>を読んでいただけると幸いです。</span>
+  </div>
 </div>
