--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -34,6 +34,11 @@
       <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
     </div>
 
+    <div class="field">
+      <%= f.label :start_date, '勉強を始めた日' %>
+      <%= f.date_field :start_date %>
+    </div>
+
     <div class="actions">
       <%= f.submit "新規登録",class: 'btn btn-success' %>
     </div>
