--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,5 +1,9 @@
 @import '~bootstrap/scss/bootstrap';
 
-.about-link {
-    margin-top: 300px;
+li {
+  list-style: none;
+}
+
+.main-top {
+  margin-top: 100px;
 }
