--- a/app/views/user/homes/about.html.erb
+++ b/app/views/user/homes/about.html.erb
@@ -1,4 +1,4 @@
-<div class='height-100'>
+<div class='main-top'>
   <h1 class='text-center'>本サイトの目的</h1>
   <p class='text-center mt-5'>
     このサイトは未来のエンジニア業界の不足を挫折率減少の面で、<br />
@@ -12,7 +12,7 @@
     利用する上での注意点
   </h2>
 
-  <ul class='list-unstyled text-center mt-5'>
+  <ul class='text-center mt-5'>
     <li>人の投稿に対する迷惑行為はやめましょう。</li>
     <li>言葉遣いに気を配りましょう。</li>
     <li>疑問点や理解しきれない箇所は積極的に質問機能を利用しましょう。（お互いのレベルアップにつながります）</li>
