--- a/app/views/user/members/check.html.erb
+++ b/app/views/user/members/check.html.erb
@@ -1,10 +1,17 @@
-<h3>本当に退会しますか？</h3>
-<p>退会すると主に以下の項目が使えなくなります</p>
-<ul>
-  <li>投稿すること</li>
-  <li>いいねすること</li>
-  <li>コメントすること</li>
-  <li>自分の今までの投稿を見ること</li>
-</ul>
+<div class='main-top'>
 
-<%= link_to '退会します', withdrawal_path,method: :patch %>
+  <h1 class='text-center'>本当に再開しますか？</h1>
+  <p class='text-center mt-5'>退会すると主に以下の項目が使えなくなります</p>
+  <ul class='text-center mt-5'>
+    <li>投稿すること</li>
+    <li>いいねすること</li>
+    <li>コメントすること</li>
+    <li>自分の今までの投稿を見ること</li>
+  </ul>
+
+  <h2 class='text-center mt-5'>上記を確認の上、実行してください</h2>
+
+  <div class='text-center mt-5'>
+    <%= link_to '退会します', withdrawal_path,method: :patch ,class: 'btn btn-danger'%>
+  </div>
+</div>
