--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,39 +1,46 @@
-<h2>タイトル: <%= @post.title %></h2>
+<div class="container">
+  <div class="row">
+    <div class="col-9 offset-2">
+      <h2>タイトル: <%= @post.title %></h2>
 
-<h4>投稿内容: <%= @post.content %></h4>
+      <h4>投稿内容: <%= @post.content %></h4>
 
-<% if current_member.id == @post.member_id %>
-  <%= link_to '編集する', edit_post_path(@post.id),class: 'btn btn-success' %>
-  <%= link_to '削除する', post_path(@post.id),method: :delete,class: 'btn btn-danger' %>
-<% else %>
-  <%= form_with model: [@post,@post_comment] do |f| %>
-    <%= f.text_area :comment, rows: '5', placeholder: 'コメントしてみよう！' %>
-    <%= f.submit 'コメントを投稿する' %>
-  <% end %>
-  
-  <% if @post.liked_by?(current_member) %>
-  <p>
-    <%= link_to post_likes_path(@post.id), method: :delete do %>
-      ♥<%= @post.likes.count %> いいね
-    <% end %>
-  </p>
-  <% else %>
-  <p>
-    <%= link_to post_likes_path(@post.id), method: :post do %>
-      ♡<%= @post.likes.count %> いいね
-    <% end %>
-  </p>
-<% end %>
+      <% if current_member.id == @post.member_id %>
+        <%= link_to '編集する', edit_post_path(@post.id),class: 'btn btn-success' %>
+        <%= link_to '削除する', post_path(@post.id),method: :delete,class: 'btn btn-danger' %>
+      <% else %>
+        <%= form_with model: [@post,@post_comment] do |f| %>
+          <%= f.text_area :comment, rows: '5', placeholder: 'コメントしてみよう！' %>
+          <%= f.submit 'コメントを投稿する' %>
+        <% end %>
 
-<% end %>
+        <% if @post.liked_by?(current_member) %>
+        <p>
+          <%= link_to post_likes_path(@post.id), method: :delete do %>
+            ♥<%= @post.likes.count %> いいね
+          <% end %>
+        </p>
+        <% else %>
+        <p>
+          <%= link_to post_likes_path(@post.id), method: :post do %>
+            ♡<%= @post.likes.count %> いいね
+          <% end %>
+        </p>
+      <% end %>
 
-<div>コメント<%= @post.post_comments.count %>件</div>
+      <% end %>
 
-<% @post.post_comments.each do |post_comment| %>
-  <%= post_comment.comment %>
-  <% if post_comment.member_id == current_member.id %>
-    <%= link_to '削除する', post_post_comment_path(post_comment.post.id, post_comment.id), method: :delete %>
-  <% end %>
-<% end %>
+      <div>コメント<%= @post.post_comments.count %>件</div>
+
+      <% @post.post_comments.each do |post_comment| %>
+        <%= post_comment.comment %>
+        <% if post_comment.member_id == current_member.id %>
+          <%= link_to '削除する', post_post_comment_path(post_comment.post.id, post_comment.id), method: :delete %>
+        <% end %>
+      <% end %>
+
+    </div>
+  </div>
+</div>
 
 
