--- a/app/views/user/members/likes.html.erb
+++ b/app/views/user/members/likes.html.erb
@@ -1,5 +1,12 @@
-<% @likes.each do |like|%>
-  <% post = Post.find_by(id: like.post_id) %>
-  <%= link_to post.member.last_name, member_path(post.member_id) %>
-  <%= link_to post.content, post_path(post.id) %>
-<% end %>
+<div class='main-top'>
+  <% if @likes.count != 0 %>
+    <% @likes.each do |like|%>
+      <% post = Post.find_by(id: like.post_id) %>
+      <%= link_to post.member.last_name, member_path(post.member_id) %>
+      <%= link_to post.content, post_path(post.id) %>
+    <% end %>
+  <% else %>
+    <h2 class='text-center mt-5'>まだいいねした投稿がありません</h2>
+    <h3 class='text-center mt-5'>参考になった投稿などをどんどんいいねして自分の力に変えましょう</h3>
+  <% end %>
+</div>
