--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -1,21 +1,30 @@
-<h2>新規投稿</h2>
 <%= render 'layouts/errors', obj: @post %>
-<%= form_with model: @post,url: posts_path do |f| %>
-  <div>
-    <%= f.label :title, 'タイトル' %><br />
-    <%= f.text_field :title %>
-  </div>
-  <div>
-    <%= f.label :content, '内容' %><br />
-    <%= f.text_area :content %>
-  </div>
-  <div>
-    <%= f.text_field :name %>
-  </div>
-  <div>
-    <%= f.select :status, Post.statuses.keys.map{ |k| [t("enums.post.status.#{k}"),k]},{} %>
-  </div>
-  <div>
-    <%= f.submit '投稿',class: 'btn btn-success' %>
-  </div>
-<% end %>
+<div class='container main-top'>
+  <div class='row'>
+    <table class='table text-center'>
+      <h2>新規投稿</h2>
+      <tbody>
+        <%= form_with model: @post,url: posts_path do |f| %>
+          <tr>
+            <th><%= f.label :title, 'タイトル' %></th>
+            <td><%= f.text_field :title %></td>
+          </tr>
+          <tr>
+            <th><%= f.label :content, '内容' %></th>
+            <td><%= f.text_area :content %></td>
+          </tr>
+          <tr>
+            <th><%= f.label :name, 'タグ' %></th>
+            <td><%= f.text_field :name %></td>
+          </tr>
+
+          <td> <%= f.select :status, Post.statuses.keys.map{ |k| [t("enums.post.status.#{k}"),k]},{},{class: "custom-select"} %> </td>
+
+          <td>
+            <%= f.submit '投稿',class: 'btn btn-success' %>
+          </td>
+        <% end %>
+      </tbody>
+    </table>
+</div>
+</div>
