admin側のページ追加

--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -1,5 +1,5 @@
 <%= link_to '会員一覧へ', admin_members_path %>
-<table>
+<table class='table'>
   <tbody>
     <tr>
       <th>会員名</th>
@@ -35,7 +35,7 @@
   </tbody>
 </table>
 
-<table>
+<table class='table'>
   <thead>
     <tr>
       <th>タイトル</th>
