--- a/app/views/admin/members/index.html.erb
+++ b/app/views/admin/members/index.html.erb
@@ -1,28 +1,29 @@
-<table>
+<h2>登録者一覧</h2>
+<table class='table'>
   <thead>
     <tr>
       <th>お名前</th>
-      <th>ニックネーム</th>
-      <th>自己紹介</th>
       <th>メールアドレス</th>
+      <th>登録日</th>
       <th>ステータス</th>
     </tr>
   </thead>
   <tbody>
     <% @members.each do |member| %>
-      <tr>
-        <td><%= link_to member.full_name, admin_member_path(member.id) %></td>
-        <td><%= member.nickname %></td>
-        <td><%= member.introduction %></td>
-        <td><%= member.email %></td>
-        <td>
-          <% if member.is_active  %>
-            <div>有効</div>
-          <% else %>
-            <div>退会</div>
-          <% end %>
-        </td>
-      </tr>
+      <% if member.guest? %>
+        <tr>
+          <td><%= link_to member.full_name, admin_member_path(member.id) %></td>
+          <td><%= member.email %></td>
+          <td><%= l member.created_at, format: :short %></td>
+          <td>
+            <% if member.is_active  %>
+              <div>有効</div>
+            <% else %>
+              <div>退会</div>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
