--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,8 +1,7 @@
 <h2><%= @member.full_name %>さんの投稿</h2>
 
-<table>
+<table class='table'>
   <tbody>
-
     <tr>
       <th>タイトル</th>
       <td><%= @post.title %></td>
@@ -13,5 +12,20 @@
       <td><%= @post.content %></td>
     </tr>
 
+    <td><%= link_to '編集する', edit_admin_post_path(@post.id) %></td>
+    <td><%= link_to '削除する', admin_post_path(@post.id),method: :delete %></td>
+
+    <div>コメント<%= @post.post_comments.count %>件</div>
+  </tbody>
+</table>
+
+<table class='table'>
+  <tbody>
+    <% @post.post_comments.each do |post_comment| %>
+        <tr>
+          <th><%= post_comment.comment %></th>
+          <td><%= link_to '削除する', post_post_comment_path(post_comment.post.id, post_comment.id), method: :delete %></td>
+        </tr>
+      <% end %>
   </tbody>
 </table>
