--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,12 +19,17 @@
             </li>
 
             <li class='nav-item mx-2'>
-              <%= link_to '投稿一覧', posts_path, class: 'nav-link active' %>
+              <%= link_to '投稿者一覧', members_path, class: 'nav-link active' %>
             </li>
 
             <li class='nav-item mx-2'>
-              <%= link_to "下書き一覧", confirm_posts_path, class: 'nav-link active' %>
+              <%= link_to '投稿一覧', posts_path, class: 'nav-link active' %>
             </li>
+            <% if current_member.guest? %>
+              <li class='nav-item mx-2'>
+                <%= link_to "下書き一覧", confirm_posts_path, class: 'nav-link active' %>
+              </li>
+            <% end %>
 
             <li class='nav-item mx-2'>
               <%= link_to 'ログアウト', destroy_member_session_path, method: :delete, class: 'nav-link active' %>
@@ -38,6 +43,10 @@
 
             <li class='nav-item mx-2'>
               <%= link_to '投稿一覧', admin_posts_path, class: 'nav-link active' %>
+            </li>
+
+            <li class='nav-item mx-2'>
+              <%= link_to 'タグ一覧', admin_tags_path, class: 'nav-link active' %>
             </li>
 
             <li class='nav-item mx-2'>
