--- a/app/views/user/members/index.html.erb
+++ b/app/views/user/members/index.html.erb
@@ -4,6 +4,9 @@
     <tr>
       <th>ニックネーム</th>
       <th>フルネーム</th>
+      <th>いいね総数</th>
+      <th>フォロー</th>
+      <th>フォロワー</th>
     </tr>
   </thead>
   <tbody>
