--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -1,7 +1,7 @@
 <h2>投稿編集ページ</h2>
-<table class='table'>
-  <tbody>
-    <%= form_with model: @post, url: post_path(@post.id) do |f| %>
+<%= form_with model: @post, url: post_path(@post.id) do |f| %>
+　<table class='table'>
+  　<tbody>
       <tr>
         <th><%= f.label :title, 'タイトル' %></th>
         <td><%= f.text_field :title %></td>
@@ -17,14 +17,13 @@
         <td><%= f.text_field :name,value: @tag_list,class:"form-control"%></td>
       </tr>
 
-      <td>
+      <tr>
         <% if @post_status %>
-          <%= f.select :status, Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"),k]}, {}, {class: "custom-select"} %>
+          <td><%= f.select :status, Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"),k]}, {}, {class: "custom-select"} %></td>
         <% end %>
-      </td>
+      </tr>
 
       <td><%= f.submit '更新する', class: 'btn btn-success' %></td>
-
-    <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+<% end %>
