--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -4,30 +4,30 @@
       <h2>タイトル: <%= @post.title %></h2>
 
       <h4>投稿内容: <%= @post.content %></h4>
-
-      <% if current_member.id == @post.member_id %>
-        <%= link_to '編集する', edit_post_path(@post.id),class: 'btn btn-success' %>
-        <%= link_to '削除する', post_path(@post.id),method: :delete,class: 'btn btn-danger' %>
-      <% else %>
-        <%= form_with model: [@post,@post_comment] do |f| %>
-          <%= f.text_area :comment, rows: '5', placeholder: 'コメントしてみよう！' %>
-          <%= f.submit 'コメントを投稿する' %>
-        <% end %>
-
-        <% if @post.liked_by?(current_member) %>
-        <p>
-          <%= link_to post_likes_path(@post.id), method: :delete do %>
-            ♥<%= @post.likes.count %> いいね
-          <% end %>
-        </p>
+      <% if current_member.guest? %>
+        <% if current_member.id == @post.member_id %>
+          <%= link_to '編集する', edit_post_path(@post.id),class: 'btn btn-success' %>
+          <%= link_to '削除する', post_path(@post.id),method: :delete,class: 'btn btn-danger' %>
         <% else %>
-        <p>
-          <%= link_to post_likes_path(@post.id), method: :post do %>
-            ♡<%= @post.likes.count %> いいね
+          <%= form_with model: [@post,@post_comment] do |f| %>
+            <%= f.text_area :comment, rows: '5', placeholder: 'コメントしてみよう！' %>
+            <%= f.submit 'コメントを投稿する' %>
           <% end %>
-        </p>
-      <% end %>
 
+          <% if @post.liked_by?(current_member) %>
+            <p>
+              <%= link_to post_likes_path(@post.id), method: :delete do %>
+                ♥<%= @post.likes.count %> いいね
+              <% end %>
+            </p>
+          <% else %>
+            <p>
+              <%= link_to post_likes_path(@post.id), method: :post do %>
+                ♡<%= @post.likes.count %> いいね
+              <% end %>
+            </p>
+          <% end %>
+        <% end %>
       <% end %>
 
       <div>コメント<%= @post.post_comments.count %>件</div>
