--- a/app/views/user/relationships/followings.html.erb
+++ b/app/views/user/relationships/followings.html.erb
@@ -1,22 +1,22 @@
 <% if @members.exists? %>
-  <% @members.each do |member| %>
-    <table>
-      <thead>
-        <tr>
-          <th>名前</th>
-          <th></th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
+  <table class='table'>
+    <thead>
+      <tr>
+        <th>名前</th>
+        <th>フォローしている人</th>
+        <th>フォローしてくれている人</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @members.each do |member| %>
         <tr>
           <td><%= member.full_name %></td>
           <td>フォロー数: <%= member.followings.count %></td>
           <td>フォロワー数: <%= member.followers.count %></td>
         </tr>
-      </tbody>
-    </table>
-  <% end %>
+      <% end %>
+    </tbody>
+  </table>
 <% else %>
   <p>ユーザーはいません</p>
 <% end %>
