--- a/app/views/user/members/edit.html.erb
+++ b/app/views/user/members/edit.html.erb
@@ -1,8 +1,13 @@
 <div><%= render 'layouts/errors', obj: @member %></div>
 
-<table class='table'>
-  <%= form_with model: @member,url: member_path(@member.id) do |f| %>
+
+<%= form_with model: @member,url: member_path(@member.id) do |f| %>
+  <table class='table'>
     <tbody>
+      <tr>
+        <th><%= f.label :profile_image, 'プロフィール画像' %></th>
+        <td><%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %></td>
+      </tr>
       <tr>
         <th><%= f.label '名前' %>&emsp;<span class="badge badge-danger">必須</span></th>
         <td>
@@ -23,5 +28,5 @@
 
       <td><%= f.submit '更新する', class: 'btn btn-success' %></td>
     </tbody>
-  <% end %>
-</div>
+  </div>
+<% end %>
