--- a/app/views/user/shared/_links.html.erb
+++ b/app/views/user/shared/_links.html.erb
@@ -1,7 +1,7 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "ログインはこちら", new_session_path(resource_name) %><br />
+  <%= link_to "ログインはこちら", new_session_path(resource_name), class: 'btn btn-primary' %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "新規登録はこちら", new_registration_path(resource_name) %><br />
+  <%= link_to "新規登録はこちら", new_registration_path(resource_name), class: 'btn btn-primary' %><br />
 <% end %>
